solving the Pricing problem